# python-xdxf2html

./: README.md  pyproject.toml  setup.py  test.cc
.github/workflows/: wheels.yml
src/: build.cc  parse.cc  utils.cc  xdxf2html.cc  xdxf2html.h
